[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/enemy/1.png" type="Texture" id=1]
[ext_resource path="res://Assets/enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/enemy/3.png" type="Texture" id=3]
[ext_resource path="res://Assets/enemy/7.png" type="Texture" id=4]
[ext_resource path="res://Assets/enemy/6.png" type="Texture" id=5]
[ext_resource path="res://Assets/enemy/5.png" type="Texture" id=6]
[ext_resource path="res://Assets/enemy/8.png" type="Texture" id=7]
[ext_resource path="res://Assets/enemy/2.png" type="Texture" id=8]
[ext_resource path="res://Assets/enemy/4.png" type="Texture" id=9]
[ext_resource path="res://Assets/Audio/monster-scream-sound-effect.ogg" type="AudioStream" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 7 ) ],
"loop": true,
"name": "Enemy_Walking",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
height = 94.4076

[sub_resource type="CircleShape2D" id=3]
radius = 941.461

[sub_resource type="CapsuleShape2D" id=4]
radius = 142.324
height = 0.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 132.258

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.45, 0.45 )
frames = SubResource( 1 )
animation = "Enemy_Walking"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -17.2664 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2( -5.0397, -1.25992 )
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 7.50854, -1.76894 )
shape = SubResource( 3 )

[node name="Area2D2" type="Area2D" parent="."]
visible = false
position = Vector2( 50.3245, 2.11893 )
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -52.0363, 1.84816 )
shape = SubResource( 4 )

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2( -3.57623, -0.447021 )
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( 2.23514, 5.36435 )
shape = SubResource( 5 )

[node name="EnemyScream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_Area2D3_body_entered"]
